# pensioni_italia

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
calcolatore/: README.md
code/: analisi.py  analisi_da_implementare.py  analisi_pensioni.py  analisi_tutto.py  analysis_all.py  analysis_pensions.py  build_panels.py  calcolatore_pensione_pagata.py  chart_utils.py  controlli_qualita.py  copertura_live.py  costruisci_pannelli.py  costruisci_tabelle_finali.py  dataset_attesi.py  dati_eurostat.py  dati_inps.py  dati_istat.py  download_all.py  esegui_pipeline.py  eurostat_data.py  finanza_pubblica.py  grafici.py  inps_open_data.py  istat_data.py  openbdap_public_finance.py  panels.py  pannelli.py  risorse_url.py  scarica_tutto.py  tabelle_finali.py  trasforma_dati.py  url_resources.py  utilita.py  utils.py
docs/: elenco_datasets.md  methodology.md  metodo_bilancio_inps_e_professioni.md
metadata/: analisi_da_implementare.csv  classificazione_prestazioni_inps.csv  classificazione_trasferimenti_inps.csv  dataset_attesi.csv  definitions.csv  definizioni_indicatori.csv  dizionario_dati.csv  domande_live.csv  elenco_datasets.csv  eurostat_whitelist.csv  inps_bilancio_fonti.csv  inps_dataset_whitelist.csv  inps_search_terms.csv  istat_dataset_whitelist.csv  mappatura_gestioni.csv  mapping_gestioni_professioni_inps.csv  openbdap_dataset_whitelist.csv  output_analitici.csv  registro_fonti.csv  risorse_url.csv  scenari_calcolatore_pensione_pagata.csv  schema_bilancio_professioni_inps.csv  scheme_mapping.csv  source_catalogue.csv  temi_dashboard.csv  (+6 more)
(+38 files in other folders)
