[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pensioni-italia"
version = "0.1.0"
description = "Pipeline for official Italian pension data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "requests>=2.31",
    "openpyxl>=3.1",
    "pyarrow>=15",
    "italian-our-world-data @ git+https://github.com/NazarenoLecis/italian_our_world_data.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
